--- a/Atividades/OrdenarSC/index.html
+++ b/Atividades/OrdenarSC/index.html
@@ -85,6 +85,8 @@
     .card{ background:#fff; border-radius:20px; padding:20px; width:min(520px, 92vw); text-align:center; box-shadow:var(--shadow) }
     .card h2{ margin:0 0 8px }
     .confetti{ font-size:42px; line-height:1.2 }
+      /* Melhor suporte a touch */
+    .tile, .slot{ touch-action: manipulation; -webkit-tap-highlight-color: transparent; }
   </style>
 </head>
 <body>
@@ -182,6 +184,7 @@
 
         // Click-to-place
         slot.addEventListener('click', handleSlotClick);
+        slot.addEventListener('pointerdown', handleSlotClick);
         slot.addEventListener('keydown', (e)=>{ if(e.key==='Enter') handleSlotClick(e); });
 
         // Drag-over for desktop DnD
@@ -203,7 +206,7 @@
       pool.ondragover = (e)=>{ e.preventDefault(); };
       pool.ondrop = (e)=>{ e.preventDefault(); const id = e.dataTransfer.getData('text/plain'); if(id) returnToPool(id); };
       // Clique no pool com uma peça selecionada retorna a peça
-      pool.addEventListener('click', ()=>{ if(selectedId){ returnToPool(selectedId); selectedId=null; qsa('.tile').forEach(el=> el.style.outline=''); } });
+      pool.addEventListener('pointerdown', ()=>{ if(selectedId){ returnToPool(selectedId); selectedId=null; qsa('.tile').forEach(el=> el.style.outline=''); } });
       state.poolIds.forEach(id=>{
         const frame = frameById(id);
         if(frame){ pool.appendChild(makeTile(frame, {draggable:true})); }
@@ -227,7 +230,7 @@
       if(enableDrag){ t.addEventListener('dragstart', (e)=>{ e.dataTransfer.setData('text/plain', frame.id); }); }
       
       // Toque/clique seleciona a peça (touch-friendly)
-      t.addEventListener('click', ()=>{ selectTile(t); });
+      t.addEventListener('pointerdown', ()=>{ selectTile(t); });
 
       // Botão de retorno ao pool quando estiver em um slot (melhor em touch)
       if(asPlaced){
@@ -236,7 +239,7 @@
         ret.type = 'button';
         ret.title = 'Voltar ao embaralhado';
         ret.textContent = '↩';
-        ret.addEventListener('click', (ev)=>{ ev.stopPropagation(); returnToPool(frame.id); });
+        ret.addEventListener('pointerdown', (ev)=>{ ev.stopPropagation(); returnToPool(frame.id); });
         t.appendChild(ret);
       }
       return t;
