--- a/Atividades/OrdenarSC/index.html
+++ b/Atividades/OrdenarSC/index.html
@@ -206,7 +206,14 @@
       pool.ondragover = (e)=>{ e.preventDefault(); };
       pool.ondrop = (e)=>{ e.preventDefault(); const id = e.dataTransfer.getData('text/plain'); if(id) returnToPool(id); };
       // Clique no pool com uma peça selecionada retorna a peça
-      pool.addEventListener('pointerdown', ()=>{ if(selectedId){ returnToPool(selectedId); selectedId=null; qsa('.tile').forEach(el=> el.style.outline=''); } });
+      pool.addEventListener('pointerdown', (e)=>{
+        // Só retorna ao pool se o toque for no FUNDO do pool (não em cima de uma tile)
+        if(!selectedId) return;
+        if(e.target.closest('.tile')) return; // não interferir ao selecionar uma peça do pool
+        returnToPool(selectedId);
+        selectedId=null;
+        qsa('.tile').forEach(el=> el.style.outline='');
+      }); selectedId=null; qsa('.tile').forEach(el=> el.style.outline=''); } });
       state.poolIds.forEach(id=>{
         const frame = frameById(id);
         if(frame){ pool.appendChild(makeTile(frame, {draggable:true})); }
