--- a/Atividades/OrdenarSC/index.html
+++ b/Atividades/OrdenarSC/index.html
@@ -141,7 +141,7 @@
       return {level, unit, fase};
     }
 
-    function storageKey({level,unit,fase}){ return \`sequencer:\${level}:\${unit}:\${fase}\`; }
+    function storageKey({level,unit,fase}){ return `sequencer:${level}:${unit}:${fase}`; }
 
     // ===================== Estado global =====================
     const state = {
@@ -158,7 +158,7 @@
     // ===================== Renderização =====================
     function renderCrumbs(){
       const {level, unit} = state.meta;
-      qs('#crumbs').textContent = \`Level \${level} · Unit \${unit}\`;
+      qs('#crumbs').textContent = `Level ${level} · Unit ${unit}`;
       qs('#title').textContent = 'Story Sequencer';
     }
 
@@ -170,7 +170,7 @@
         slot.className = 'slot' + (val? ' filled':'');
         slot.setAttribute('role','listitem');
         slot.setAttribute('data-idx', idx);
-        slot.setAttribute('aria-label', \`Slot \${idx+1}\`);
+        slot.setAttribute('aria-label', `Slot ${idx+1}`);
         slot.tabIndex = 0;
 
         const num = document.createElement('span');
