--- a/Atividades/OrdenarSC/index.html
+++ b/Atividades/OrdenarSC/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Story Sequencer — Ordene a História (Texto abaixo do quadrado)</title>
+  <title>Story Sequencer — Layout Vertical (Texto abaixo, largura total)</title>
   <style>
-    /* === Mesmo body das outras atividades === */
+    /* Mesmo body das outras atividades */
     body {
       font-family: Arial, sans-serif;
       text-align: center;
@@ -33,7 +33,7 @@
 
     .wrap{ width:min(1100px, 100%); margin:0 auto 24px; display:flex; flex-direction:column; gap:12px }
 
-    /* Mini-mapa (ancoras 1..N) */
+    /* Minimap */
     .minimap{
       position: sticky; top: 0; z-index: 5;
       background: rgba(245,245,245,.9);
@@ -66,21 +66,35 @@
       .cols{ grid-template-columns: 1fr 1fr; align-items:start }
     }
 
-    /* Linha do tempo: cartões em coluna (texto embaixo do quadrado) */
     .timelineCol, .poolCol{
       background:#fff; border:1px dashed #ddd; padding:12px; border-radius:16px; box-shadow:var(--shadow);
       text-align: left;
     }
     .sectionTitle{ margin:6px 0 10px; font-weight:700; text-align:left }
 
+    /* Cartão do slot: grade com 3 colunas
+       col1: número (44px)
+       col2: quadrado (110px)
+       col3: faixa flexível (1fr) só para dar largura ao texto na linha de baixo
+       linha1: num | slot | (vazio)
+       linha2: texto ocupa as 3 colunas -> fica largo e legível
+    */
     .slotCard{
-      display:flex; flex-direction:column; align-items:center; gap:8px;
-      padding:10px; border:1px solid #eee; border-radius:12px; background:#fff; margin-bottom:10px;
+      display:grid;
+      grid-template-columns: 44px 110px 1fr;
+      grid-template-rows: auto auto;
+      gap:10px 12px;
+      align-items:center;
+      padding:12px;
+      border:1px solid #eee; border-radius:12px; background:#fff; margin-bottom:12px;
     }
     .slotNum{
-      width:36px; height:36px; border-radius:10px; background:#fafafa; border:1px solid #ddd; display:flex; align-items:center; justify-content:center; font-weight:700;
+      grid-column: 1; grid-row: 1;
+      width:44px; height:44px; border-radius:10px; background:#fafafa; border:1px solid #ddd;
+      display:flex; align-items:center; justify-content:center; font-weight:700;
     }
     .slot{
+      grid-column: 2; grid-row: 1;
       width:110px; height:110px; background:#fafafa; border:2px dashed var(--slot-border); border-radius:12px;
       display:flex; align-items:center; justify-content:center; position:relative; overflow:hidden;
     }
@@ -90,9 +104,11 @@
     @keyframes shake{ 0%{ transform:translateX(0) } 25%{ transform:translateX(-4px) } 50%{ transform:translateX(4px) } 75%{ transform:translateX(-2px) } 100%{ transform:translateX(0) } }
 
     .slotText{
-      width:110px; font-size:.9rem; color:#222; text-align:left;
-      display:-webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow:hidden;
-      white-space:normal;
+      grid-column: 1 / 4; /* ocupa 1..3 */
+      grid-row: 2;
+      font-size:.95rem; color:#222; text-align:left;
+      white-space:normal; overflow:visible;
+      line-height: 1.3;
     }
 
     /* Pool: lista/grade vertical rolável */
@@ -116,7 +132,6 @@
       position:absolute; top:6px; right:6px; width:24px; height:24px; border-radius:999px; border:1px solid #ddd; background:#fff; font-size:14px; line-height:22px; box-shadow: var(--shadow); cursor:pointer
     }
 
-    /* Touch helpers */
     .tile, .slot{ touch-action: manipulation; -webkit-tap-highlight-color: transparent; }
     .selected{ outline:3px solid var(--brand) }
 
@@ -248,7 +263,7 @@
             slot.appendChild(tile);
           }
         }
-        // touch: tocar slot com peça selecionada
+        // tocar slot com peça selecionada
         slot.addEventListener('pointerdown', handleSlotTap);
         // desktop DnD
         slot.addEventListener('dragover', function(e){ e.preventDefault(); });
@@ -302,7 +317,7 @@
 
       var img = document.createElement('img'); img.src = frame.image; img.alt = 'frame'; t.appendChild(img);
 
-      // toque/clique para selecionar
+      // toque/click para selecionar
       t.addEventListener('pointerdown', function(e){
         e.stopPropagation();
         selectTile(t);
